--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,15 +4,24 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".SingtelDining"
-                  android:label="@string/app_name">
+    	<uses-library android:name="com.google.android.maps"></uses-library>
+        <activity android:name=".SingtelDining" android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name="SingtelDiningMainScreen" android:label="SingtelDiningMainScreen" android:screenOrientation="portrait" />
     </application>
     <uses-sdk android:minSdkVersion="3" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_GPS" />
+	<uses-permission android:name="android.permission.CALL_PHONE" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_ASSISTED_GPS" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest> 
