--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
             </intent-filter>
         </activity>
         <activity android:name="SingtelDiningMainScreen" android:label="SingtelDiningMainScreen" android:screenOrientation="portrait" />
+        <activity android:name="TwitterPage" android:label="TwitterPage" android:screenOrientation="portrait" />
     </application>
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET" />
