--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
         </activity>
         <activity android:name="SingtelDiningMainScreen" android:label="SingtelDiningMainScreen" android:screenOrientation="portrait" />
         <activity android:name="TwitterPage" android:label="TwitterPage" android:screenOrientation="portrait" />
+        <activity android:name="Description" android:label="Description" android:screenOrientation="portrait" />
     </application>
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET" />
