--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name="SingtelDiningMainScreen" android:label="SingtelDiningMainScreen" android:screenOrientation="portrait" />
         <activity android:name="TwitterPage" android:label="TwitterPage" android:screenOrientation="portrait" />
         <activity android:name="Description" android:label="Description" android:screenOrientation="portrait" />
+        <activity android:name="SettingsPage" android:label="SettingsPage" android:screenOrientation="portrait" />
     </application>
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET" />
