--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,10 @@
         <activity android:name="TwitterPage" android:label="TwitterPage" android:screenOrientation="portrait" />
         <activity android:name="Description" android:label="Description" android:screenOrientation="portrait" />
         <activity android:name="SettingsPage" android:label="SettingsPage" android:screenOrientation="portrait" />
+        
+        <activity android:name="com.codecarpet.fbconnect.FBLoginActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:screenOrientation="portrait"/>
+		<activity android:name="com.codecarpet.fbconnect.FBPermissionActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:screenOrientation="portrait"/>
+		<activity android:name="com.codecarpet.fbconnect.FBFeedActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:screenOrientation="portrait"/>
     </application>
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET" />
