- Implemented MapView but still with problem on the layout.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,10 +11,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="SingtelDiningMainScreen" android:label="SingtelDiningMainScreen" android:screenOrientation="portrait" />
+        <activity android:name="SingtelDiningMainPage" android:label="SingtelDiningMainPage" android:screenOrientation="portrait" />
         <activity android:name="TwitterPage" android:label="TwitterPage" android:screenOrientation="portrait" />
-        <activity android:name="Description" android:label="Description" android:screenOrientation="portrait" />
+        <activity android:name="DescriptionPage" android:label="DescriptionPage" android:screenOrientation="portrait" />
         <activity android:name="SettingsPage" android:label="SettingsPage" android:screenOrientation="portrait" />
+        <activity android:name="MapPage" android:label="MapPage" android:screenOrientation="portrait" />
         
         <activity android:name="com.codecarpet.fbconnect.FBLoginActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:screenOrientation="portrait"/>
 		<activity android:name="com.codecarpet.fbconnect.FBPermissionActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:screenOrientation="portrait"/>
