--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,8 @@
         <activity android:name="SettingsPage" android:label="SettingsPage" android:screenOrientation="portrait" />
         <activity android:name="MapPage" android:label="MapPage" android:screenOrientation="portrait" />
         <activity android:name="TermsPage" android:label="TermsPage" android:screenOrientation="portrait" />
+        <activity android:name="CategoryListingPage" android:label="CategoryListingPage" android:screenOrientation="portrait" />
+        <activity android:name="SubCategoryListingPage" android:label="SubCategoryListingPage" android:screenOrientation="portrait" />
         <activity android:name="ARScreen" android:label="ARScreen" />
         
         <activity android:name="com.codecarpet.fbconnect.FBLoginActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:screenOrientation="portrait"/>
