- Implemented all search

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity android:name="TermsPage" android:label="TermsPage" android:screenOrientation="portrait" />
         <activity android:name="CategoryListingPage" android:label="CategoryListingPage" android:screenOrientation="portrait" />
         <activity android:name="SubCategoryListingPage" android:label="SubCategoryListingPage" android:screenOrientation="portrait" />
+        <activity android:name="CuisineListingPage" android:label="CuisineListingPage" android:screenOrientation="portrait" />
+        <activity android:name="SearchPage" android:label="SearchPage" android:screenOrientation="portrait" />
         <activity android:name="ARScreen" android:label="ARScreen" />
         
         <activity android:name="com.codecarpet.fbconnect.FBLoginActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:screenOrientation="portrait"/>
